--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,7 @@
                                     <includes>
                                         <include>host.json</include>
                                         <include>local.settings.json</include>
+                                        <include>proxies.json</include>
                                     </includes>
                                 </resource>
                             </resources>
